Source/JavaScriptCore/runtime/IteratorOperations.h
@@ -32,23 +32,26 @@
 
 namespace JSC {
 
-JSValue iteratorNext(ExecState*, JSValue iterator, JSValue);
-JSValue iteratorNext(ExecState*, JSValue iterator);
-JS_EXPORT_PRIVATE JSValue iteratorValue(ExecState*, JSValue iterator);
-bool iteratorComplete(ExecState*, JSValue iterator);
-JS_EXPORT_PRIVATE JSValue iteratorStep(ExecState*, JSValue iterator);
-JS_EXPORT_PRIVATE void iteratorClose(ExecState*, JSValue iterator);
+struct IterationRecord {
+    JSValue iterator;
+    JSValue nextMethod;
+};
+
+JSValue iteratorNext(ExecState*, IterationRecord, JSValue argument = JSValue());
+JS_EXPORT_PRIVATE JSValue iteratorValue(ExecState*, JSValue iterResult);
+bool iteratorComplete(ExecState*, JSValue iterResult);
+JS_EXPORT_PRIVATE JSValue iteratorStep(ExecState*, IterationRecord);
+JS_EXPORT_PRIVATE void iteratorClose(ExecState*, IterationRecord);
 JS_EXPORT_PRIVATE JSObject* createIteratorResultObject(ExecState*, JSValue, bool done);
 
 Structure* createIteratorResultObjectStructure(VM&, JSGlobalObject&);
 
 JS_EXPORT_PRIVATE JSValue iteratorMethod(ExecState&, JSObject*);
-JS_EXPORT_PRIVATE JSValue iteratorForIterable(ExecState&, JSObject*, JSValue iteratorMethod);
+JS_EXPORT_PRIVATE IterationRecord iteratorForIterable(ExecState&, JSObject*, JSValue iteratorMethod);
+JS_EXPORT_PRIVATE IterationRecord iteratorForIterable(ExecState*, JSValue iterable);
 
 JS_EXPORT_PRIVATE JSValue iteratorMethod(ExecState&, JSObject*);
 JS_EXPORT_PRIVATE bool hasIteratorMethod(ExecState&, JSValue);
-
-JS_EXPORT_PRIVATE JSValue iteratorForIterable(ExecState*, JSValue iterable);
 
 template<typename CallBackType>
 void forEachInIterable(ExecState* exec, JSValue iterable, const CallBackType& callback)
@@ -56,10 +59,10 @@ void forEachInIterable(ExecState* exec, JSValue iterable, const CallBackType& ca
     auto& vm = exec->vm();
     auto scope = DECLARE_THROW_SCOPE(vm);
 
-    JSValue iterator = iteratorForIterable(exec, iterable);
+    IterationRecord iterationRecord = iteratorForIterable(exec, iterable);
     RETURN_IF_EXCEPTION(scope, void());
     while (true) {
-        JSValue next = iteratorStep(exec, iterator);
+        JSValue next = iteratorStep(exec, iterationRecord);
         if (UNLIKELY(scope.exception()) || next.isFalse())
             return;
 
@@ -69,7 +72,7 @@ void forEachInIterable(ExecState* exec, JSValue iterable, const CallBackType& ca
         callback(vm, exec, nextValue);
         if (UNLIKELY(scope.exception())) {
             scope.release();
-            iteratorClose(exec, iterator);
+            iteratorClose(exec, iterationRecord);
             return;
         }
     }
@@ -81,10 +84,10 @@ void forEachInIterable(ExecState& state, JSObject* iterable, JSValue iteratorMet
     auto& vm = state.vm();
     auto scope = DECLARE_THROW_SCOPE(vm);
 
-    auto iterator = iteratorForIterable(state, iterable, iteratorMethod);
+    auto iterationRecord = iteratorForIterable(state, iterable, iteratorMethod);
     RETURN_IF_EXCEPTION(scope, void());
     while (true) {
-        JSValue next = iteratorStep(&state, iterator);
+        JSValue next = iteratorStep(&state, iterationRecord);
         if (UNLIKELY(scope.exception()) || next.isFalse())
             return;
 
@@ -94,7 +97,7 @@ void forEachInIterable(ExecState& state, JSObject* iterable, JSValue iteratorMet
         callback(vm, state, nextValue);
         if (UNLIKELY(scope.exception())) {
             scope.release();
-            iteratorClose(&state, iterator);
+            iteratorClose(&state, iterationRecord);
             return;
         }
     }
