JSTests/stress/spread-optimized-properly.js
@@ -149,7 +149,7 @@ test(function() {
         assert(t.length === 3);
         assert(t[0] === 1);
         assert(t[1] === 2);
-        assert(t[2] === 4);
+        assert(t[2] === 3);
         iterProto.next = oldNext;
     }
 });
