Source/JavaScriptCore/builtins/IteratorHelpers.js
@@ -33,10 +33,11 @@ function performIteration(iterable)
     let result = [];
 
     let iterator = iterable.@iteratorSymbol();
+    let next = iterator.next;
     let item;
     let index = 0;
     while (true) {
-        item = iterator.next();
+        item = next.@call(iterator);
         if (!@isObject(item))
             @throwTypeError("Iterator result interface is not an object");
         if (item.done)
